@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+CRE: bullet-like spells damage and cost report, praying only.
+Nicolas Weeger 2010-07-18
+
 CRE: add 'damage' to object wrapper.
 Nicolas Weeger 2010-07-18
 
